                        User-Visible lbcd Changes

lbcd 3.5.1 (unreleased)

    Switch the lbcd systemd unit to Type=simple and add lbcd.socket to
    Also= and Requires= so that the two are linked.  There's no need to
    use notify for lbcd since the only resource it needs to set up is its
    socket, which socket activation handles.  Also fix a typo in the
    WantedBy= field.

lbcd 3.5.0 (2013-12-28)

    lbcd no longer allows the client to request probes of arbitrary
    supported services.  Instead, specify the services lbcd should allow
    to be queried with the -a option, which can be given multiple times.
    Querying any service not listed with an -a option will result in an
    error reply.

    Drop support for lbcd -s, to stop a running daemon, and lbcd -r, to
    restart a running daemon.  This sort of daemon management is best done
    via a system framework, whether init scripts, upstart, or systemd.

    lbcd no longer writes its PID file to /var/run/lbcd.pid by default.
    The -P option, specifying where to write a PID file, is still
    supported, but unless it is given, lbcd does not write out a PID file.
    lbcd also now removes any PID file it creates on exit.

    lbcdclient has been rewritten.  The output format is now completely
    different and more human-readable.  The timeout and port are
    configurable on the command line, and the option parsing now supports
    long options.  The command no longer takes a list of multiple servers
    to query, and exits with an error message if it cannot reach a server
    within the timeout.  lbcdclient supports IPv6 if the IO::Socket::INET6
    Perl module is installed.

    lbcd supports a new -f option, which runs the daemon in the foreground
    (as preferred by modern init systems) but still logs to syslog, unlike
    the existing -d option which also moves logging to standard output and
    standard error.

    Implement lbcd -l, which now logs to syslog each incoming client