@@ -2,6 +2,9 @@
 
 lbcd 3.5.1 (unreleased)
 
+    Mark lbcd sockets listening as close-on-exec so that they're not
+    inherited by weight commands run via the -c option.
+
     Switch the lbcd systemd unit to Type=simple and add lbcd.socket to
     Also= and Requires= so that the two are linked.  There's no need to
     use notify for lbcd since the only resource it needs to set up is its
